--- a/package.json
+++ b/package.json
@@ -1,25 +1,12 @@
+
 {
-  "name": "catering-service-system",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+  "name": "gourmetgo-vercel",
+  "version": "1.0.0",
+  "description": "Catering Service System for Vercel",
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "@google/genai": "^1.27.0",
-    "react-router-dom": "^7.9.4",
-    "path": "^0.12.7",
-    "fs": "^0.0.1-security"
+    "@google/genai": "^1.27.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "typescript": "^5.0.0"
   }
 }
