feat: Add placeholder components and update package name
Introduces new UI components: a loading spinner and a share modal.
Also adds a placeholder page for order tracking functionality.
Updates the project's package name in package.json.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "gourmetgo-vercel",
+  "name": "gourmetgo_vercel",
   "version": "1.0.0",
   "description": "Catering Service System for Vercel",
   "dependencies": {
