feat: Enhance Gemini API integration and TS config
Updates the Gemini API handler to safely access and trim response text, preventing potential errors from empty responses. Adds `@types/node` and `moduleResolution: "node"` to `tsconfig.json` and `package.json` to improve TypeScript support for Node.js environments.

--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "gourmetgo_vercel",
   "version": "1.0.0",
@@ -7,6 +6,7 @@
     "@google/genai": "^1.27.0"
   },
   "devDependencies": {
+    "@types/node": "^20.11.20",
     "typescript": "^5.0.0"
   }
 }
