feat: Integrate Mongoose for database management
Replaces the file-based data storage with a MongoDB database using Mongoose. This change introduces database models and updates the API logic to interact with the new database structure. Dependency updates for mongoose are also included.

--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "Catering Service System for Vercel",
   "dependencies": {
-    "@google/genai": "^1.27.0"
+    "@google/genai": "^1.27.0",
+    "mongoose": "^8.5.1"
   },
   "devDependencies": {
-    "@types/node": "^20.11.20",
+    "@types/node": "^20.14.10",
     "typescript": "^5.0.0"
   }
 }
