feat: Add user cart and favorites persistence
This commit introduces the ability for users to save their shopping cart and favorite items across sessions. It includes backend API endpoints for updating user cart and favorites, corresponding frontend service updates, and schema modifications to store these new fields on the user model. Additionally, it adds user-specific persistent data fields to the `types.ts` and updates the `AppContext` to manage and persist this user state. The `package.json` has also been updated to include `vercel` as a dev dependency.

--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "gourmetgo_vercel",
   "version": "1.0.0",
   "description": "Catering Service System for Vercel",
+  "scripts": {
+    "dev": "vercel dev"
+  },
   "dependencies": {
     "@google/genai": "^1.27.0",
     "mongoose": "^8.5.1"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vercel": "^35.2.1"
   }
 }
