--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "gourmetgo_vercel",
+  "name": "gourmetgo_express",
   "version": "1.0.0",
-  "description": "Catering Service System for Vercel",
+  "description": "Catering Service System with an Express backend.",
+  "main": "dist/server.js",
   "scripts": {
-    "dev": "vercel dev"
+    "start": "node dist/server.js",
+    "build": "tsc -p server",
+    "dev": "nodemon"
   },
   "dependencies": {
     "@google/genai": "^1.27.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "mongoose": "^8.5.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.14.10",
-    "typescript": "^5.0.0",
-    "vercel": "^35.2.1"
+    "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.0.0"
   }
 }
